--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,7 +31,7 @@ a {
     background: url('../assets/back-new.jpg');
     background-size: cover;
     background-repeat: no-repeat;
-    background-attachment: scroll;
+    background-attachment: fixed;
 
   }
 }
